# lakeforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_build_and_prune.py  02_athena_ddl.py  03_discover_s3.py
lakeforge/: __init__.py  cli.py  discovery.py  errors.py  generate.py  glue.py  manifest.py  partition.py  predicate.py  pruning.py  schema.py
tests/: test_cli.py  test_discovery.py  test_generate.py  test_glue.py  test_glue_drop.py  test_hardening.py  test_manifest.py  test_partition.py  test_predicate.py  test_pruning.py  test_schema.py
