[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "lakeforge"
version = "0.2.0"
description = "Toolkit for Hive-partitioned data lakes on S3: partition paths, predicate pruning, Athena/Glue DDL, manifests, and S3 discovery."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Abdur Rehman Sarwar" }]
keywords = ["aws", "s3", "athena", "glue", "data-lake", "partitioning", "etl", "redshift-spectrum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.26"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "boto3>=1.26",
    "moto[s3]>=4.2",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/AbdurRehmanSarwar/lakeforge"
Repository = "https://github.com/AbdurRehmanSarwar/lakeforge"
Issues = "https://github.com/AbdurRehmanSarwar/lakeforge/issues"

[project.scripts]
lakeforge = "lakeforge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["lakeforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["lakeforge"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore.*"]
ignore_missing_imports = true
